{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 33,
  "lineage": "c583d774-14ae-4b08-af80-037221f2eba5",
  "resources": [
    {
      "module": "module.ec2_1",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:629500205300:instance/i-0161a10c89f159b19",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0161a10c89f159b19",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "free-tier-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00fba1492c73561c4",
            "private_dns": "ip-10-0-1-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.251",
            "public_dns": "ec2-54-162-174-37.compute-1.amazonaws.com",
            "public_ip": "54.162.174.37",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0707055ebd7fc1aa0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-073f6629486d7aa1d",
            "tags": {
              "Name": "Free Tier EC2 default - tight-primate"
            },
            "tags_all": {
              "Name": "Free Tier EC2 default - tight-primate"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03659f6dbe1f4e1ea"
            ]
          },
          "dependencies": [
            "module.ec2_1.random_pet.ec2_name",
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.public_subnet.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:629500205300:instance/i-085fa68ea3aebc03b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-085fa68ea3aebc03b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "free-tier-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d26157972a4c81e2",
            "private_dns": "ip-10-0-2-76.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.76",
            "public_dns": "ec2-44-211-188-55.compute-1.amazonaws.com",
            "public_ip": "44.211.188.55",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00588e1bab3e99a8d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-065b914b6c5e9d7b1",
            "tags": {
              "Name": "Free Tier EC2 default - many-marmoset"
            },
            "tags_all": {
              "Name": "Free Tier EC2 default - many-marmoset"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03659f6dbe1f4e1ea"
            ]
          },
          "dependencies": [
            "module.ec2_2.random_pet.ec2_name",
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.public_subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_3",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b9e92b5572fa0d1",
            "arn": "arn:aws:ec2:us-east-1:629500205300:instance/i-03278ff3b755cc84b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03278ff3b755cc84b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "free-tier-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e25fac90c7865a4b",
            "private_dns": "ip-10-0-3-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.251",
            "public_dns": "ec2-44-204-175-40.compute-1.amazonaws.com",
            "public_ip": "44.204.175.40",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-029f021028179b5f4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-069d6dbe887058d80",
            "tags": {
              "Name": "Free Tier EC2 default - famous-buck"
            },
            "tags_all": {
              "Name": "Free Tier EC2 default - famous-buck"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03659f6dbe1f4e1ea"
            ]
          },
          "dependencies": [
            "module.ec2_3.random_pet.ec2_name",
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.public_subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629500205300:security-group/sg-03659f6dbe1f4e1ea",
            "description": "Free Tier EC2 Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03659f6dbe1f4e1ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Free Tier EC2 Security Group",
            "name_prefix": "",
            "owner_id": "629500205300",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Free Tier EC2 Security Group"
            },
            "tags_all": {
              "Name": "Free Tier EC2 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0823238c91b4b4463"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629500205300:internet-gateway/igw-0756104e640e53042",
            "id": "igw-0756104e640e53042",
            "owner_id": "629500205300",
            "tags": {
              "Name": "Free Tier Internet Gateway"
            },
            "tags_all": {
              "Name": "Free Tier Internet Gateway"
            },
            "vpc_id": "vpc-0823238c91b4b4463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:loadbalancer/app/free-tier-alb/ecfc4fb1498c7fa4",
            "arn_suffix": "app/free-tier-alb/ecfc4fb1498c7fa4",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "free-tier-alb-786957223.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:629500205300:loadbalancer/app/free-tier-alb/ecfc4fb1498c7fa4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "free-tier-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-03659f6dbe1f4e1ea"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-065b914b6c5e9d7b1"
              },
              {
                "subnet_id": "subnet-069d6dbe887058d80"
              },
              {
                "subnet_id": "subnet-073f6629486d7aa1d"
              }
            ],
            "subnets": [
              "subnet-065b914b6c5e9d7b1",
              "subnet-069d6dbe887058d80",
              "subnet-073f6629486d7aa1d"
            ],
            "tags": {
              "Name": "Free Tier ALB"
            },
            "tags_all": {
              "Name": "Free Tier ALB"
            },
            "vpc_id": "vpc-0823238c91b4b4463",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.public_subnet.aws_subnet.public_subnet_1",
            "module.public_subnet.aws_subnet.public_subnet_2",
            "module.public_subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:listener/app/free-tier-alb/ecfc4fb1498c7fa4/a1ea5b895afe398e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:629500205300:listener/app/free-tier-alb/ecfc4fb1498c7fa4/a1ea5b895afe398e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:loadbalancer/app/free-tier-alb/ecfc4fb1498c7fa4",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.lb.aws_lb.alb",
            "module.lb.aws_lb_target_group.alb_target_group",
            "module.public_subnet.aws_subnet.public_subnet_1",
            "module.public_subnet.aws_subnet.public_subnet_2",
            "module.public_subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
            "arn_suffix": "targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "free-tier-alb-tg-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0823238c91b4b4463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attachment_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f-20240517210628265800000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
            "target_id": "i-0161a10c89f159b19"
          },
          "dependencies": [
            "module.ec2_1.aws_instance.ec2",
            "module.ec2_1.random_pet.ec2_name",
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.lb.aws_lb_target_group.alb_target_group",
            "module.public_subnet.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attachment_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f-20240517210638169600000006",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
            "target_id": "i-085fa68ea3aebc03b"
          },
          "dependencies": [
            "module.ec2_2.aws_instance.ec2",
            "module.ec2_2.random_pet.ec2_name",
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.lb.aws_lb_target_group.alb_target_group",
            "module.public_subnet.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "alb_tg_attachment_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f-20240517210627751300000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:629500205300:targetgroup/free-tier-alb-tg-group/9ad1c119e809162f",
            "target_id": "i-03278ff3b755cc84b"
          },
          "dependencies": [
            "module.ec2_3.aws_instance.ec2",
            "module.ec2_3.random_pet.ec2_name",
            "module.ec2_key_pair.aws_key_pair.ec2_key_pair",
            "module.ec2_security_group.aws_security_group.ec2_security_group",
            "module.lb.aws_lb_target_group.alb_target_group",
            "module.public_subnet.aws_subnet.public_subnet_3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629500205300:subnet/subnet-073f6629486d7aa1d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073f6629486d7aa1d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629500205300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Free Tier Public Subnet - default"
            },
            "tags_all": {
              "Name": "Free Tier Public Subnet - default"
            },
            "vpc_id": "vpc-0823238c91b4b4463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629500205300:subnet/subnet-065b914b6c5e9d7b1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065b914b6c5e9d7b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629500205300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Free Tier Public Subnet - default"
            },
            "tags_all": {
              "Name": "Free Tier Public Subnet - default"
            },
            "vpc_id": "vpc-0823238c91b4b4463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629500205300:subnet/subnet-069d6dbe887058d80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069d6dbe887058d80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "629500205300",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Free Tier Public Subnet - default"
            },
            "tags_all": {
              "Name": "Free Tier Public Subnet - default"
            },
            "vpc_id": "vpc-0823238c91b4b4463"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:629500205300:vpc/vpc-0823238c91b4b4463",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b86df8610a17c802",
            "default_route_table_id": "rtb-0e930ff408d4e6118",
            "default_security_group_id": "sg-0602a90126f2e6a72",
            "dhcp_options_id": "dopt-0d55e67a3dc305b0b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0823238c91b4b4463",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e930ff408d4e6118",
            "owner_id": "629500205300",
            "tags": {
              "Name": "Free Tier VPC - default"
            },
            "tags_all": {
              "Name": "Free Tier VPC - default"
            }
          }
        }
      ]
    }
  ]
}